--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,21 @@
   <version>1.1-SNAPSHOT</version>
   <name>whirr-cm</name>
   <url>http://maven.apache.org</url>
+  <repositories>
+    <repository>
+      <id>cdh.repo</id>
+      <url>https://repository.cloudera.com/content/groups/cloudera-repos</url>
+      <name>Cloudera Repository</name>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.apache.whirr</groupId>
       <artifactId>whirr-core</artifactId>
-      <version>0.7.1</version>
+      <version>0.8.0-cdh4.1.1</version>
     </dependency>
   </dependencies>
   <build>
