--- a/pom.xml
+++ b/pom.xml
@@ -34,19 +34,64 @@
       </snapshots>
     </repository>
   </repositories>
+	<properties>
+	  <whirr.version>0.8.0-cdh4.1.1</whirr.version>
+	  <junit.version>4.8.1</junit.version>
+	  <log4j.version>1.2.16</log4j.version>
+		<slf4j.version>1.6.4</slf4j.version>
+		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
+	</properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.whirr</groupId>
       <artifactId>whirr-core</artifactId>
-      <version>0.8.0-cdh4.1.1</version>
+      <version>${whirr.version}</version>
+      <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.whirr</groupId>
+      <artifactId>whirr-cdh</artifactId>
+      <version>${whirr.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.whirr</groupId>
+      <artifactId>whirr-core</artifactId>
+      <classifier>tests</classifier>
+      <version>${whirr.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>${log4j.version}</version>
+      <scope>test</scope>
+    </dependency>        
   </dependencies>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.5.1</version>
+        <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
