--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
 	  <log4j.version>1.2.16</log4j.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
   <dependencies>
     <dependency>
