Modify cm-ec2.properties template to use cmagent instead of cmnode

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -20,7 +20,7 @@ whirr.cluster-name=cmcluster
 
 # Change the number of cmnode instances in the line below to run a cluster
 # of a different size
-whirr.instance-templates=1 cmserver,5 cmnode
+whirr.instance-templates=1 cmserver,5 cmagent
 
 # The private key used by the Cloudera Manager cluster
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
