--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,17 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>cloudera-snapshot-internal</id>
+			<url>http://maven.jenkins.cloudera.com:8081/artifactory/libs-snapshot-local</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</repository>
 	</repositories>
 	<properties>
-		<whirr.version>0.8.0-cdh4.1.1</whirr.version>
+		<whirr.version>0.9.0-SNAPSHOT</whirr.version>
+		<cm.version>4.5.0-SNAPSHOT</cm.version>
 		<junit.version>4.8.1</junit.version>
 		<log4j.version>1.2.16</log4j.version>
 		<slf4j.version>1.6.4</slf4j.version>
@@ -55,6 +63,11 @@
 			<artifactId>whirr-cdh</artifactId>
 			<version>${whirr.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cloudera.api</groupId>
+			<artifactId>cloudera-manager-api</artifactId>
+			<version>${cm.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.whirr</groupId>
@@ -89,16 +102,32 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-		</plugins>
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>${maven-compiler-plugin.version}</version>
+			<configuration>
+				<source>1.6</source>
+				<target>1.6</target>
+			</configuration>
+		</plugin>
+		<plugin>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>single</goal>
+					</goals>
+				</execution>
+			</executions>
+			<configuration>
+				<descriptorRefs>
+					<descriptorRef>jar-with-dependencies</descriptorRef>
+				</descriptorRefs>
+			</configuration>
+		</plugin>
+	</plugins>
 	</build>
 </project>
