CDH-10408: add whirr.env.cmauto doc and default in config

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -36,3 +36,6 @@ whirr.hardware-id=m1.large
 whirr.image-id=us-east-1/ami-ccb35ea5
 # If you choose a different location, make sure whirr.image-id is updated too
 whirr.location-id=us-east-1
+
+# Switch to enable/disable the automatic setup of a cluster within Cloudera Manager, its initialization and launch 
+whirr.env.cmauto=true
