Adding Hive support and switching to using parcels rather than packages.

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -19,3 +19,6 @@ cmserver.port.web=7180
 cmserver.port.comms=7182
 cmserver.ports=
 cmnode.ports=8088,8888,50030,50060,50070,50090,60010,60030
+
+cmserver.parcel.product=CDH
+cmserver.parcel.version=4.2.0-1.cdh4.2.0.p0.10
