--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -2,5 +2,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.conversionPattern=%d %-5p %m%n
 #log4j.appender.stdout.layout.conversionPattern=%d %p [%t] %c %l %m%n
-log4j.rootLogger=INFO,stdout
 
+log4j.logger.org.apache=FATAL
+
+log4j.rootLogger=DEBUG,stdout
