Support declarative roles, including HDFS, MR1, ZK, HBase - Hive/Impala/Oozie/Client to come

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -20,7 +20,7 @@ whirr.cluster-name=cmcluster
 
 # Change the number of cmnode instances in the line below to run a cluster
 # of a different size
-whirr.instance-templates=1 cmserver,5 cmagent
+whirr.instance-templates=1 cmserver+cmagent,1 cmcdh-namenode+cmcdh-jobtracker+cmagent,3 cmcdh-datanode+cmcdh-tasktracker+cmagent
 
 # The private key used by the Cloudera Manager cluster
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
@@ -39,3 +39,6 @@ whirr.location-id=us-east-1
 
 # Switch to enable/disable the automatic setup of a cluster within Cloudera Manager, its initialization and launch 
 whirr.env.cmauto=true
+
+# Provide Cloudera Manager settings with prefix 'whirr.cm.config.' followed by setting name (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html) 
+whirr.cm.config.CUSTOM_BANNER_HTML=My Cloudera Manager managed and Whirr provisioned Cluster
