--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -20,7 +20,7 @@ whirr.cluster-name=cmcluster
 
 # Change the number of cmnode instances in the line below to run a cluster
 # of a different size
-whirr.instance-templates=1 cmserver+cmagent,1 cmcdh-namenode+cmcdh-jobtracker+cmagent,3 cmcdh-datanode+cmcdh-tasktracker+cmagent
+whirr.instance-templates=1 cmserver+cmagent,1 cmagent+cmcdh-namenode+cmcdh-zookeeper,1 cmagent+cmcdh-secondarynamenode+cmcdh-hbase-master+cmcdh-zookeeper,1 cmagent+cmcdh-jobtracker+cmcdh-hivemetastore+cmcdh-impala-statestore+cmcdh-zookeeper,3 cmagent+cmcdh-datanode+cmcdh-tasktracker+cmcdh-hbase-regionserver+cmcdh-impala-daemon
 
 # The private key used by the Cloudera Manager cluster
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
@@ -37,8 +37,17 @@ whirr.image-id=us-east-1/ami-ccb35ea5
 # If you choose a different location, make sure whirr.image-id is updated too
 whirr.location-id=us-east-1
 
-# Switch to enable/disable the automatic setup of a cluster within Cloudera Manager, its initialization and launch 
+# Switch to enable/disable the automatic setup of a cluster within Cloudera Manager,
+# its initialization and launch 
 whirr.env.cmauto=true
 
-# Provide Cloudera Manager settings with prefix 'whirr.cm.config.' followed by setting name (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html) 
-whirr.cm.config.CUSTOM_BANNER_HTML=My Cloudera Manager managed and Whirr provisioned Cluster
+# Provide Cloudera Manager settings with prefix 'whirr.cm.config.' followed by
+# setting name (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html) 
+whirr.cm.config.CUSTOM_BANNER_HTML=My Cloudera Manager managed, Whirr provisioned CDH Cluster
+
+# Provide an escaped comma separated list (eg \\,) of Parcel Repo Mirrors
+# (potentially closer or vetted by your organisation), which in turn dictate the
+# version of parcels installed - Cloudera Manager selects the latest available
+# (see http://archive.cloudera.com/cdh4/parcels and http://beta.cloudera.com/impala/parcels)
+whirr.cm.config.REMOTE_PARCEL_REPO_URLS=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
+
