provide cluster name build time checking, preventing CM/jclouds issues

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -16,11 +16,11 @@
 #
 
 # The name of the cluster
-whirr.cluster-name=cmcluster
+whirr.cluster-name=whirr
 
 # Change the number of cmnode instances in the line below to run a cluster
 # of a different size
-whirr.instance-templates=1 cmserver+cmagent,1 cmagent+cmcdh-namenode+cmcdh-zookeeper,1 cmagent+cmcdh-secondarynamenode+cmcdh-hbase-master+cmcdh-zookeeper,1 cmagent+cmcdh-jobtracker+cmcdh-hivemetastore+cmcdh-impala-statestore+cmcdh-zookeeper,3 cmagent+cmcdh-datanode+cmcdh-tasktracker+cmcdh-hbase-regionserver+cmcdh-impala-daemon
+whirr.instance-templates=1 cmserver+cmagent,1 cmagent+cmcdh-namenode+cmcdh-zookeeper,1 cmagent+cmcdh-secondarynamenode+cmcdh-hbase-master+cmcdh-zookeeper,1 cmagent+cmcdh-jobtracker+cmcdh-hivemetastore+cmcdh-zookeeper,3 cmagent+cmcdh-datanode+cmcdh-tasktracker+cmcdh-hbase-regionserver
 
 # The private key used by the Cloudera Manager cluster
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
