add doc surrounding cluster naming

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 
-# The name of the cluster
+# The name of the cluster, must be made up of alpha-numeric values only
 whirr.cluster-name=whirr
 
 # Change the number of cmnode instances in the line below to run a cluster
