add doc surrounding cluster sizing

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -18,8 +18,8 @@
 # The name of the cluster, must be made up of alpha-numeric values only
 whirr.cluster-name=whirr
 
-# Change the number of cmnode instances in the line below to run a cluster
-# of a different size
+# Change the number of the last instance template token (intially set to 3)
+# to change the size of the cluster
 whirr.instance-templates=1 cmserver+cmagent,1 cmagent+cmcdh-namenode+cmcdh-zookeeper,1 cmagent+cmcdh-secondarynamenode+cmcdh-hbase-master+cmcdh-zookeeper,1 cmagent+cmcdh-jobtracker+cmcdh-hivemetastore+cmcdh-zookeeper,3 cmagent+cmcdh-datanode+cmcdh-tasktracker+cmcdh-hbase-regionserver
 
 # The private key used by the Cloudera Manager cluster
