--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -46,7 +46,7 @@ whirr.env.cmauto=true
 whirr.cm.config.CUSTOM_BANNER_HTML=My Cloudera Manager managed, Whirr provisioned CDH Cluster
 
 # Provide an escaped comma separated list (eg \\,) of Parcel Repo Mirrors
-# (potentially closer or vetted by your organisation), which in turn dictate the
+# (potentially closer to or vetted by your organisation), which in turn dictate the
 # version of parcels installed - Cloudera Manager selects the latest available
 # (see http://archive.cloudera.com/cdh4/parcels and http://beta.cloudera.com/impala/parcels)
 whirr.cm.config.REMOTE_PARCEL_REPO_URLS=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
