--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -20,3 +20,4 @@ cmserver.port.comms=7182
 cmserver.ports=
 cmnode.ports=8088,8888,50030,50060,50070,50090,60010,60030
 
+cm.data.dirs.default=/data/1
