rename whirr-cm roles with nicer 'cm-' prefix

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -15,9 +15,9 @@
 # limitations under the License.
 #
 
-cmserver.port.web=7180
-cmserver.port.comms=7182
-cmserver.ports=
-cmnode.ports=8088,8888,50030,50060,50070,50090,60010,60030
+cm-server.port.web=7180
+cm-server.port.comms=7182
+cm-server.ports=
+cm-node.ports=8088,8888,50030,50060,50070,50090,60010,60030
 
 cm.data.dirs.default=/data/1
