Improve console logging

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -5,4 +5,4 @@ log4j.appender.stdout.layout.conversionPattern=%d %-5p %m%n
 
 log4j.logger.org.apache=FATAL
 
-log4j.rootLogger=DEBUG,stdout
+log4j.rootLogger=WARN,stdout
