--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -4,5 +4,6 @@ log4j.appender.stdout.layout.conversionPattern=%d %-5p %m%n
 #log4j.appender.stdout.layout.conversionPattern=%d %p [%t] %c %l %m%n
 
 log4j.logger.org.apache=FATAL
+log4j.logger.com.cloudera.whirr.cm=INFO
 
 log4j.rootLogger=WARN,stdout
