Implement command role based filtering, improved error reporting, deal with empty cluster more gracefully

--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.whirr</groupId>
+			<artifactId>whirr-cli</artifactId>
+			<version>${whirr.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.whirr</groupId>
 			<artifactId>whirr-cdh</artifactId>
 			<version>${whirr.version}</version>
 			<scope>provided</scope>
