Update documentation with new commands

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -18,9 +18,8 @@
 # The name of the cluster, must be made up of alpha-numeric values only
 whirr.cluster-name=whirr
 
-# Change the number of the last instance template token (intially set to 3)
-# to change the size of the cluster
-whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-zookeeper,1 cm-agent+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-zookeeper,1 cm-agent+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver+cm-cdh-zookeeper,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon
+# Define the cluster topology, initially defining 1 master node and 3 slave nodes
+whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper
 
 # The private key used by the Cloudera Manager cluster
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
@@ -38,7 +37,7 @@ whirr.image-id=us-east-1/ami-ccb35ea5
 whirr.location-id=us-east-1
 
 # Switch to enable/disable the automatic setup of a cluster within Cloudera Manager,
-# its initialization and launch 
+# its initialization and launch, defaults to true
 whirr.env.cmauto=true
 
 # Provide Cloudera Manager settings with prefix 'whirr.cm.config.' followed by
@@ -46,8 +45,7 @@ whirr.env.cmauto=true
 whirr.cm.config.CUSTOM_BANNER_HTML=My Cloudera Manager managed, Whirr provisioned CDH Cluster
 
 # Provide an escaped comma separated list (eg \\,) of Parcel Repo Mirrors
-# (potentially closer to or vetted by your organisation), which in turn dictate the
+# (potentially closer to and or vetted by your organisation), which in turn dictate the
 # version of parcels installed - Cloudera Manager selects the latest available
 # (see http://archive.cloudera.com/cdh4/parcels and http://beta.cloudera.com/impala/parcels)
 whirr.cm.config.REMOTE_PARCEL_REPO_URLS=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
-
