--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		</repository>
 	</repositories>
 	<properties>
-		<whirr.version>0.9.0-SNAPSHOT</whirr.version>
+		<whirr.version>0.8.2</whirr.version>
 		<cm.version>4.5.0</cm.version>
 		<log4j.version>1.2.16</log4j.version>
 		<slf4j.version>1.6.4</slf4j.version>
