Implement firewall rules for CM/CDH roles

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -15,9 +15,32 @@
 # limitations under the License.
 #
 
+cm-server.data.dirs.default=/data/1
+
 cm-server.port.web=7180
 cm-server.port.comms=7182
 cm-server.ports=
-cm-node.ports=8088,8888,50030,50060,50070,50090,60010,60030
 
-cm.data.dirs.default=/data/1
+cm-node.ports=
+
+cm-cdh-namenode.ports=8020,50070
+cm-cdh-secondarynamenode.ports=50090
+cm-cdh-datanode.ports=50010,50075,50020
+
+cm-cdh-jobtracker.ports=8021,50030,9290
+cm-cdh-tasktracker.ports=50060
+
+cm-cdh-zookeeper.ports=2181,2888,3888,3181,4181,8019,9010
+
+cm-cdh-hbase-master.ports=60000,60010,8080,9090
+cm-cdh-hbase-regionserver.ports=60020,60030
+
+cm-cdh-hivemetastore.ports=9083
+
+cm-cdh-impala-daemon.ports=21000,22000,25000
+cm-cdh-impala-statestore.ports=23000,25010,24000
+
+cm-cdh-hue-server.ports=8888
+cm-cdh-hue-beeswaxserver.ports=8002,8003
+
+cm-cdh-oozie-server.ports=11000,11001
