--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -38,7 +38,7 @@ whirr.location-id=us-east-1
 
 # Switch to enable/disable the automatic setup of a cluster within Cloudera Manager,
 # its initialization and launch, defaults to true
-whirr.env.cmauto=true
+whirr.cm.auto=true
 
 # Provide Cloudera Manager settings with prefix 'whirr.cm.config.' followed by
 # setting name (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html) 
