Generalise database service, provide cm,cm-mgmt,hive,oozie,hue db impl

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -36,6 +36,11 @@ whirr.image-id=us-east-1/ami-ccb35ea5
 # If you choose a different location, make sure whirr.image-id is updated too
 whirr.location-id=us-east-1
 
+# Global (whirr.cm.db) and role specific (whirr.cm.db.<role>) database types used
+# for persistent stores. Valid enumerations are 'mysql', defaults to 'mysql'
+whirr.cm.db=mysql
+whirr.cm.db.cm-cdh-hivemetastore=mysql
+
 # Switch to enable/disable the automatic setup of a cluster within Cloudera Manager,
 # its initialization and launch, defaults to true
 whirr.cm.auto=true
