Punch hole in firewall for database servers

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -15,6 +15,9 @@
 # limitations under the License.
 #
 
+database.port.mysql=3306
+database.port.postgres=5432
+
 cm-server.data.dirs.default=/data/1
 
 cm-server.port.web=7180
