Implement CM service pass through configuration, including device/mount based directories and paramaterised DB settings

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -15,42 +15,51 @@
 # limitations under the License.
 #
 
-# The name of the cluster, must be made up of alpha-numeric values only
+# The name of the cluster, must be alpha-numeric
 whirr.cluster-name=whirr
 
-# Define the cluster topology, initially defining 1 master node and 3 slave nodes
+# Define the cluster topology, initially defining 1 CM server node, 1 CDH master node and 3 CDH slave nodes
 whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper
 
-# The private key used by the Cloudera Manager cluster
+# The private key used by the cluster nodes
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
 
-# Cloud credentials
+# Cloud provider details, example Amazon AWS EC2 details provided
 whirr.provider=aws-ec2
 whirr.identity=${env:AWS_ACCESS_KEY_ID}
 whirr.credential=${env:AWS_SECRET_ACCESS_KEY}
-
-# The size of the instance to use. See http://aws.amazon.com/ec2/instance-types/
 whirr.hardware-id=m1.large
-# RightImage CentOS_5.4_x64_v4.4.10
 whirr.image-id=us-east-1/ami-ccb35ea5
-# If you choose a different location, make sure whirr.image-id is updated too
 whirr.location-id=us-east-1
 
-# Global (whirr.cm.db) and role specific (whirr.cm.db.<role>) database types used
-# for persistent stores. Valid enumerations are 'mysql', defaults to 'mysql'
-whirr.cm.db=mysql
-whirr.cm.db.cm-cdh-hivemetastore=mysql
-
-# Switch to enable/disable the automatic setup of a cluster within Cloudera Manager,
+# Switch to enable/disable the automatic setup of a cluster within CM,
 # its initialization and launch, defaults to true
 whirr.cm.auto=true
 
-# Provide Cloudera Manager settings with prefix 'whirr.cm.config.' followed by
-# setting name (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html) 
-whirr.cm.config.CUSTOM_BANNER_HTML=My Cloudera Manager managed, Whirr provisioned CDH Cluster
+# Overide host storage device mount points with single directory for CM Service directories
+#whirr.cm.data.dirs.root=/data
 
-# Provide an escaped comma separated list (eg \\,) of Parcel Repo Mirrors
-# (potentially closer to and or vetted by your organisation), which in turn dictate the
-# version of parcels installed - Cloudera Manager selects the latest available
-# (see http://archive.cloudera.com/cdh4/parcels and http://beta.cloudera.com/impala/parcels)
-whirr.cm.config.REMOTE_PARCEL_REPO_URLS=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
+# Global database type setting for all CM and CDH datastores, overidden on a case by case basis
+# by CM Service settings (see below), defaults to 'mysql'
+whirr.cm.db.type=mysql
+
+# Provide Cloudera Manager settings with prefix 'whirr.cm.config.' followed by
+# setting name (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html)
+# All settings are defaulted to reasonable values, but some overiding examples are show below:
+whirr.cm.config.custom_banner_html=My Cloudera Manager managed, Whirr provisioned CDH Cluster
+whirr.cm.config.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
+
+# Provide CM Services settings with prefix 'whirr.cm.service.config.' followed by service name
+# (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services.html)
+# or role name (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services_-serviceName-_roles.html)
+# then followed by '.' and setting name (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services_-serviceName-_roles_-roleName-_config.html) 
+# All settings are defaulted to reasonable values, but some overiding examples are show below:
+whirr.cm.service.config.datanode.dfs_datanode_data_dir_perm=755
+whirr.cm.service.config.mapreduce_gateway.mapred_submit_replication=3
+whirr.cm.service.config.mapreduce_gateway.mapred_reduce_tasks=3
+whirr.cm.service.config.hive.hive_metastore_database_type=mysql
+whirr.cm.service.config.hive.hive_metastore_database_host=localhost
+whirr.cm.service.config.hive.hive_metastore_database_port=3306
+whirr.cm.service.config.hive.hive_metastore_database_user=cdh_hive
+whirr.cm.service.config.hive.hive_metastore_database_password=cdh_hive
+whirr.cm.service.config.hive.hive_metastore_database_name=cdh_hive
