--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -15,10 +15,88 @@
 # limitations under the License.
 #
 
+# General settings
+
+whirr.cm.auto=true
+whirr.cm.use.packages=false
+whirr.cm.data.dirs.root.default=/data/1
+whirr.cm.db.type=mysql
+
+whirr.cm.service.default.config.namenode.dfs_name_dir_list=/dfs/nn
+whirr.cm.service.default.config.secondarynamenode.fs_checkpoint_dir_list=/dfs/snn
+whirr.cm.service.default.config.datanode.dfs_data_dir_list=/dfs/dn
+whirr.cm.service.default.config.jobtracker.jobtracker_mapred_local_dir_list=/mr/jt
+whirr.cm.service.default.config.tasktracker.tasktracker_mapred_local_dir_list=/mr/tt
+
+# Service settings defaults
+
+whirr.cm.service.config.hdfs.dfs_block_local_path_access_user=impala
+whirr.cm.service.config.datanode.dfs_datanode_data_dir_perm=755
+whirr.cm.service.config.hdfs_gateway.dfs_client_use_trash=true
+
+whirr.cm.service.config.jobtracker.mapred_job_tracker_handler_count=22
+whirr.cm.service.config.mapreduce_gateway.mapred_submit_replication=3
+whirr.cm.service.config.mapreduce_gateway.mapred_reduce_tasks=3
+
+whirr.cm.service.config.hiveserver2.hive_hs2_config_safety_valve=<property>\n\t<name>hive.support.concurrency</name>\n\t<value>true</value>\n</property>\n<property>\n\t<name>hive.zookeeper.quorum</name>\n\t<!-- This should be populated with the ZK instance connection strings -->\n\t<value>myzookeper-host.com</value>\n</property>
+
+whirr.cm.service.config.cm.cm_database_type=
+whirr.cm.service.config.cm.cm_database_name=cm
+
+whirr.cm.service.config.hue.database_type=
+whirr.cm.service.config.hue.database_host=localhost
+whirr.cm.service.config.hue.database_port=
+whirr.cm.service.config.hue.database_user=cdh_hue
+whirr.cm.service.config.hue.database_password=cdh_hue
+whirr.cm.service.config.hue.database_name=cdh_hue
+
+whirr.cm.service.config.hive.hive_metastore_database_type=
+whirr.cm.service.config.hive.hive_metastore_database_host=localhost
+whirr.cm.service.config.hive.hive_metastore_database_port=
+whirr.cm.service.config.hive.hive_metastore_database_user=cdh_hive
+whirr.cm.service.config.hive.hive_metastore_database_password=cdh_hive
+whirr.cm.service.config.hive.hive_metastore_database_name=cdh_hive
+
+whirr.cm.service.config.oozie_server.oozie_database_type=
+whirr.cm.service.config.oozie_server.oozie_database_host=localhost
+whirr.cm.service.config.oozie_server.oozie_database_user=cm_hmon
+whirr.cm.service.config.oozie_server.oozie_database_password=cm_hmon
+whirr.cm.service.config.oozie_server.oozie_database_name=cm_hmon
+
+whirr.cm.service.config.hostmonitor.firehose_database_type=
+whirr.cm.service.config.hostmonitor.firehose_database_host=localhost
+whirr.cm.service.config.hostmonitor.firehose_database_user=cm_hmon
+whirr.cm.service.config.hostmonitor.firehose_database_password=cm_hmon
+whirr.cm.service.config.hostmonitor.firehose_database_name=cm_hmon
+
+whirr.cm.service.config.servicemonitor.firehose_database_type=
+whirr.cm.service.config.servicemonitor.firehose_database_host=localhost
+whirr.cm.service.config.servicemonitor.firehose_database_user=cm_smon
+whirr.cm.service.config.servicemonitor.firehose_database_password=cm_smon
+whirr.cm.service.config.servicemonitor.firehose_database_name=cm_smon
+
+whirr.cm.service.config.activitymonitor.firehose_database_type=
+whirr.cm.service.config.activitymonitor.firehose_database_host=localhost
+whirr.cm.service.config.activitymonitor.firehose_database_user=cm_amon
+whirr.cm.service.config.activitymonitor.firehose_database_password=cm_amon
+whirr.cm.service.config.activitymonitor.firehose_database_name=cm_amon
+
+whirr.cm.service.config.reportsmanager.headlamp_database_type=
+whirr.cm.service.config.reportsmanager.headlamp_database_host=localhost
+whirr.cm.service.config.reportsmanager.headlamp_database_user=cm_rmgr
+whirr.cm.service.config.reportsmanager.headlamp_database_password=cm_rmgr
+whirr.cm.service.config.reportsmanager.headlamp_database_name=cm_rmgr
+
+whirr.cm.service.config.navigator.navigator_database_type=
+whirr.cm.service.config.navigator.navigator_database_host=localhost
+whirr.cm.service.config.navigator.navigator_database_user=cm_navr
+whirr.cm.service.config.navigator.navigator_database_password=cm_navr
+whirr.cm.service.config.navigator.navigator_database_name=cm_navr
+
+# Network settings
+
 database.port.mysql=3306
 database.port.postgres=5432
-
-cm-server.data.dirs.default=/data/1
 
 cm-server.port.web=7180
 cm-server.port.comms=7182
