Create init-cluster command

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -43,23 +43,25 @@ whirr.cm.auto=true
 # by CM Service settings (see below), defaults to 'mysql'
 whirr.cm.db.type=mysql
 
-# Provide Cloudera Manager settings with prefix 'whirr.cm.config.' followed by
+# Provide CM settings with prefix 'whirr.cm.config.cm' followed by
 # setting name (see http://cloudera.github.com/cm_api/apidocs/v3/path__cm_config.html)
 # All settings are defaulted to reasonable values, but some overiding examples are show below:
-whirr.cm.config.custom_banner_html=My Cloudera Manager managed, Whirr provisioned CDH Cluster
-whirr.cm.config.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
+whirr.cm.config.cm.cm_database_name=cm
+whirr.cm.config.cm.cm_database_type=mysql
+whirr.cm.config.cm.custom_banner_html=My Cloudera Manager managed, Whirr provisioned CDH Cluster
+whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
 
-# Provide CM Services settings with prefix 'whirr.cm.service.config.' followed by service name
+# Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
 # (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services.html)
 # or role name (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services_-serviceName-_roles.html)
 # then followed by '.' and setting name (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services_-serviceName-_roles_-roleName-_config.html) 
 # All settings are defaulted to reasonable values, but some overiding examples are show below:
-whirr.cm.service.config.datanode.dfs_datanode_data_dir_perm=755
-whirr.cm.service.config.mapreduce_gateway.mapred_submit_replication=3
-whirr.cm.service.config.mapreduce_gateway.mapred_reduce_tasks=3
-whirr.cm.service.config.hive.hive_metastore_database_type=mysql
-whirr.cm.service.config.hive.hive_metastore_database_host=localhost
-whirr.cm.service.config.hive.hive_metastore_database_port=3306
-whirr.cm.service.config.hive.hive_metastore_database_user=cdh_hive
-whirr.cm.service.config.hive.hive_metastore_database_password=cdh_hive
-whirr.cm.service.config.hive.hive_metastore_database_name=cdh_hive
+whirr.cm.config.datanode.dfs_datanode_data_dir_perm=755
+whirr.cm.config.mapreduce_gateway.mapred_submit_replication=3
+whirr.cm.config.mapreduce_gateway.mapred_reduce_tasks=3
+whirr.cm.config.hive.hive_metastore_database_type=mysql
+whirr.cm.config.hive.hive_metastore_database_host=localhost
+whirr.cm.config.hive.hive_metastore_database_port=3306
+whirr.cm.config.hive.hive_metastore_database_user=cdh_hive
+whirr.cm.config.hive.hive_metastore_database_password=cdh_hive
+whirr.cm.config.hive.hive_metastore_database_name=cdh_hive
