Implement client side firewall rules

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -21,6 +21,9 @@ whirr.cluster-name=whirr
 # Define the cluster topology, initially defining 1 CM server node, 1 CDH master node and 3 CDH slave nodes
 whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper
 
+# List of client IP ranges that can access the CM and CDH web console and client servers
+whirr.client-cirds=0.0.0.0/0
+
 # The private key used by the cluster nodes
 whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
 
@@ -32,12 +35,16 @@ whirr.hardware-id=m1.large
 whirr.image-id=us-east-1/ami-ccb35ea5
 whirr.location-id=us-east-1
 
-# Switch to enable/disable the automatic setup of a cluster within CM,
+# Switch to enable (true) or disable (false) the automatic setup of a cluster within CM,
 # its initialization and launch, defaults to true
 whirr.cm.auto=true
 
 # Overide host storage device mount points with single directory for CM Service directories
 #whirr.cm.data.dirs.root=/data
+
+# Decide whether to issue cloud secuirty profile and iptables directives to open ports (true)
+# or rely on unfettered network access (false), defaults to false
+whirr.cm.firewall.enable=true
 
 # Global database type setting for all CM and CDH datastores, overidden on a case by case basis
 # by CM Service settings (see below), defaults to 'mysql'
