--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -20,6 +20,7 @@
 whirr.cm.auto=true
 whirr.cm.use.packages=false
 whirr.cm.data.dirs.root.default=/data/1
+whirr.cm.firewall.enable=false
 whirr.cm.db.type=mysql
 
 whirr.cm.default.config.namenode.dfs_name_dir_list=/dfs/nn
@@ -106,24 +107,24 @@ cm-server.ports=
 
 cm-node.ports=
 
-cm-cdh-namenode.ports=8020,50070
-cm-cdh-secondarynamenode.ports=50090
-cm-cdh-datanode.ports=50010,50075,50020
+cm-cdh-namenode.client.ports=50070
+cm-cdh-secondarynamenode.client.ports=50090
+cm-cdh-datanode.client.ports=50075
 
-cm-cdh-jobtracker.ports=8021,50030,9290
-cm-cdh-tasktracker.ports=50060
+cm-cdh-jobtracker.client.ports=50030
+cm-cdh-tasktracker.client.ports=50060
 
-cm-cdh-zookeeper.ports=2181,3181,4181,8019,9010
+cm-cdh-zookeeper.client.ports=
 
-cm-cdh-hbase-master.ports=60000,60010,8080,9090
-cm-cdh-hbase-regionserver.ports=60020,60030
+cm-cdh-hbase-master.client.ports=60010
+cm-cdh-hbase-regionserver.client.ports=60030
 
-cm-cdh-hivemetastore.ports=9083
+cm-cdh-hivemetastore.client.ports=
 
-cm-cdh-impala-daemon.ports=21000,22000
-cm-cdh-impala-statestore.ports=23000,24000
+cm-cdh-impala-daemon.client.ports=25000
+cm-cdh-impala-statestore.client.ports=25010
 
-cm-cdh-hue-server.ports=8888
-cm-cdh-hue-beeswaxserver.ports=8002,8003
+cm-cdh-hue-server.client.ports=8888
+cm-cdh-hue-beeswaxserver.client.ports=
 
-cm-cdh-oozie-server.ports=11000,11001
+cm-cdh-oozie-server.client.ports=11000
