Filter out non CM config paramaters

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -107,11 +107,11 @@ cm-server.ports=
 
 cm-node.ports=
 
-cm-cdh-namenode.client.ports=50070
+cm-cdh-namenode.client.ports=8020,50070
 cm-cdh-secondarynamenode.client.ports=50090
 cm-cdh-datanode.client.ports=50075
 
-cm-cdh-jobtracker.client.ports=50030
+cm-cdh-jobtracker.client.ports=8021,50030
 cm-cdh-tasktracker.client.ports=50060
 
 cm-cdh-zookeeper.client.ports=
@@ -119,7 +119,7 @@ cm-cdh-zookeeper.client.ports=
 cm-cdh-hbase-master.client.ports=60010
 cm-cdh-hbase-regionserver.client.ports=60030
 
-cm-cdh-hivemetastore.client.ports=
+cm-cdh-hivemetastore.client.ports=9083
 
 cm-cdh-impala-daemon.client.ports=25000
 cm-cdh-impala-statestore.client.ports=25010
