Update example properties

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -18,6 +18,9 @@
 # The name of the cluster, must be alpha-numeric
 whirr.cluster-name=whirr
 
+# The user to run use when setting up the cluster
+whirr.cluster-user=whirr
+
 # Define the cluster topology, initially defining 1 CM server node, 1 CDH master node and 3 CDH slave nodes
 whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper
 
@@ -29,10 +32,10 @@ whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
 
 # Cloud provider details, example Amazon AWS EC2 details provided
 whirr.provider=aws-ec2
-whirr.identity=${env:AWS_ACCESS_KEY_ID}
-whirr.credential=${env:AWS_SECRET_ACCESS_KEY}
+whirr.identity=${env:WHIRR_CLOUD_PROVIDER_ID}
+whirr.credential=${env:WHIRR_CLOUD_PROVIDER_KEY}
 whirr.hardware-id=m1.large
-whirr.image-id=us-east-1/ami-ccb35ea5
+whirr.image-id=us-east-1/ami-c30360aa
 whirr.location-id=us-east-1
 
 # Switch to enable (true) or disable (false) the automatic setup of a cluster within CM,
