Update key definitions

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -27,8 +27,9 @@ whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-
 # List of client IP ranges that can access the CM and CDH web console and client servers
 whirr.client-cirds=0.0.0.0/0
 
-# The private key used by the cluster nodes
-whirr.private-key-file=${sys:user.home}/.ssh/id_rsa_cm
+# The keys used by the cluster nodes
+whirr.private-key-file=${sys:user.home}/.ssh/whirr
+whirr.public-key-file=${sys:user.home}/.ssh/whirr.pub
 
 # Cloud provider details, example Amazon AWS EC2 details provided
 whirr.provider=aws-ec2
