Update example properties to values that consistently produce good results

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -25,7 +25,7 @@ whirr.cluster-user=whirr
 whirr.instance-templates=1 cm-server+cm-agent,1 cm-agent+cm-cdh-namenode+cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver,3 cm-agent+cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-zookeeper
 
 # List of client IP ranges that can access the CM and CDH web console and client servers
-whirr.client-cirds=0.0.0.0/0
+whirr.client-cidrs=0.0.0.0/0
 
 # The keys used by the cluster nodes
 whirr.private-key-file=${sys:user.home}/.ssh/whirr
@@ -36,7 +36,7 @@ whirr.provider=aws-ec2
 whirr.identity=${env:WHIRR_CLOUD_PROVIDER_ID}
 whirr.credential=${env:WHIRR_CLOUD_PROVIDER_KEY}
 whirr.hardware-id=m1.large
-whirr.image-id=us-east-1/ami-d4f89fbd
+whirr.image-id=us-east-1/ami-d0f89fb9
 whirr.location-id=us-east-1
 
 # Switch to enable (true) or disable (false) the automatic setup of a cluster within CM,
@@ -59,7 +59,7 @@ whirr.cm.db.type=mysql
 # All settings are defaulted to reasonable values, but some overiding examples are show below:
 whirr.cm.config.cm.cm_database_name=cm
 whirr.cm.config.cm.cm_database_type=mysql
-whirr.cm.config.cm.custom_banner_html=My Cloudera Manager managed, Whirr provisioned CDH Cluster
+whirr.cm.config.cm.custom_banner_html=My Whirr provisioned CM/CDH Cluster
 whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh4/parcels/latest/\\,http://beta.cloudera.com/impala/parcels/latest/
 
 # Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
@@ -76,3 +76,8 @@ whirr.cm.config.hive.hive_metastore_database_port=3306
 whirr.cm.config.hive.hive_metastore_database_user=cdh_hive
 whirr.cm.config.hive.hive_metastore_database_password=cdh_hive
 whirr.cm.config.hive.hive_metastore_database_name=cdh_hive
+
+# Up the comms layer timeouts
+jclouds.compute.timeout.port-open=1200000
+jclouds.compute.timeout.node-running=3200000
+jclouds.compute.timeout.script-complete=18000000
